[tool.poetry]
name = "cyansdk"
version = "1.3.2"
description = ""
authors = ["kirinnee <kirinnee97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
